# parkinson

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  README.ru.md  bootstrap.py  install.sh  pyproject.toml
docs/: architecture.md  architecture.ru.md  clean-room-provenance.md  conventions.md  conventions.ru.md  hooks-reference.md  hooks-reference.ru.md  install.md  install.ru.md
hooks/: post-tool-use.py  pre-compact.py  pre-tool-use.py  session-end.py  session-start.py
scripts/: agentshield_run.py  cluster_instincts.py  compile.py  config.py  flush.py  instincts.py  lint.py  migrate_project_scope.py  observations.py  query.py  synthesize_instincts.py  utils.py  utils_projects.py
templates/: global-claude-md-snippet.md  global-claude-md-snippet.ru.md  knowledge-index.md  knowledge-log.md  projects.json  settings.example.json
tests/: README.md  README.ru.md
tests/fixtures/: minimal-transcript.jsonl
tests/smoke/: test_lint_structural.sh  test_session_start.sh
