[project]
name = "parkinson"
version = "0.1.0"
description = "Personal knowledge-base compiler for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
]

[tool.uv]
package = false
